--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>FrauenLoop-04</title>
   </head>
   <body>
     <div id="users">
